# ddm

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  index.html  manage.py  pyproject.toml  requirements.txt  search-index.js  setup.cfg  version_bump.sh
.github/workflows/: dependabot-merge.yml  dependabot_merge.yml  merge-dev-to-main.yml  publish-docs.yml  publish-prerelease-to-pypi.yml  publish-to-pypi.yml  publish_docs.yml  publish_docs_to_ghpages.yml  publish_to_pypi.yml  test-ddm.yml  test-develop.yml
_/css/: site.css
_/js/: site.js
ddm/: __init__.py  admin.py  apps.py  auth.py  context_processors.py  default_settings.py  forms.py  settings.py  signals.py  tools.py  urls.py  views.py
ddm/1/: about.html  for_admins.html  for_developers.html  for_participants.html  for_researchers.html  index.html  topic_references.html
ddm/admin_views/: __init__.py  filter.py  general.py  pages.py  questionnaire.py  questions.py  triggers.py
ddm/apis/: apps.py  serializers.py  urls.py  views.py
ddm/auth/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
ddm/core/: apis.py  apps.py  ckeditor_config.py  urls.py
ddm/datadonation/: apis.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
ddm/develop/: about.html  for_admins.html  for_developers.html  for_participants.html  for_researchers.html  index.html  issues.html  topic_references.html
ddm/encryption/: models.py  serializers.py
ddm/logging/: admin.py  apis.py  apps.py  models.py  urls.py  utils.py  views.py
ddm/main/: about.html  for_admins.html  for_developers.html  for_participants.html  (+4 more)
ddm_pooled/: admin.py  apps.py  middleware.py  models.py  serializers.py  settings.py  tests.py  urls.py  utils.py  views.py
docs/: about.html  antora-playbook-local.yml  antora-playbook.yml  antora.yml  for_admins.html  for_developers.html  for_participants.html  for_researchers.html  index.html  package-lock.json  package.json  somecontent.txt  topic_references.html  update_screenshots.py
frontend/: .node-version  README.md  package-lock.json  package.json  vue.config.js
test_project/: .coveragerc  dev_requirements.txt  manage.py  settings.py  test_config.json  test_config.json.example  urls.py
vue_frontend/: package-lock.json  package.json  vue.config.js  webpack-stats.json
(+1013 files in other folders)
