[metadata]
name = django-ddm
version = __version__
description = A Django app to setup data donation projects.
long_description = file: README.md
url = https://github.com/uzh/ddm
project_urls =
    Documentation = https://uzh.github.io/ddm/
    Website = https://datadonation.uzh.ch
author = Nico Pfiffner
author_email = n.pfiffner@ikmz.uzh.ch
license = GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >= 59.4.0
install_requires =
    Django>=4.2
    pycryptodome
    django-ckeditor
    django-polymorphic
    django-webpack-loader
    djangorestframework
